# Kry

./: .gitignore  Kry.cabal  eukleid.hs  monoCiphers.hs
app/: ClassicCiphers.hs  CryptoAnalysis.hs  Eukleid.hs  Main.hs  ModularAlgebra.hs  Polynom.hs
