cabal-version:      2.4
name:               Kry
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Lukas Balog
maintainer:         lukasbalog66@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Kry
    main-is:          Main.hs
    other-modules:
        Eukleid
        ClassicCiphers
        ModularAlgebra
        CryptoAnalysis

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
